# ddr0-watcher

./: Cargo.toml  ddr0-watcher.service  ddr0-watcher.timer  readme.md  rustfmt.toml  watch.sh
src/: main.rs
