[package]
name = "ddr0-watcher"
version = "0.1.0"
authors = ["DDR <d@ddr0.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.2.0", features=["macros"]}
futures = "0.3.13"
reqwest = "0.11.0"
notify-rust = "4"